@@ -656,7 +656,6 @@ void GChemTableApp::OnSaveAsImage (GChemTableCurve *curve)
 	if (!curve)
 		return;
 	list<string> l;
-	unsigned n = 0;
 	char const *mime;
 	map<string, GdkPixbufFormat*>::iterator i, end = m_SupportedPixbufFormats.end ();
 	for (i = m_SupportedPixbufFormats.begin (); i != end; i++)
